[gd_scene load_steps=8 format=3 uid="uid://da8habsl3gcp7"]

[ext_resource type="Script" path="res://Scripts/Shops/shop_skill_mie_ayam.gd" id="2_ekcun"]
[ext_resource type="Texture2D" uid="uid://bqnu1ld3wa5j6" path="res://Sprites/FoodStalls/mie ayam/19.png" id="3_nrr4r"]
[ext_resource type="Texture2D" uid="uid://cp5idsptnpalo" path="res://Sprites/FoodStalls/mie ayam/20.png" id="4_23nqm"]
[ext_resource type="Texture2D" uid="uid://6fvbi7ur31ct" path="res://Sprites/FoodStalls/mie ayam/21.png" id="5_fy17k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsalt"]
size = Vector2(15, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocuq0"]
size = Vector2(9.66666, 59.6667)

[sub_resource type="SpriteFrames" id="SpriteFrames_6cbo2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nrr4r")
}, {
"duration": 1.0,
"texture": ExtResource("4_23nqm")
}, {
"duration": 1.0,
"texture": ExtResource("5_fy17k")
}],
"loop": true,
"name": &"MieayamStall",
"speed": 5.0
}]

[node name="ShopMieAyam" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("2_ekcun")
placableTileIDs = Array[int]([1])

[node name="ShopBody" type="Area2D" parent="."]
position = Vector2(-32, -32)
scale = Vector2(4, 4)
collision_layer = 2
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="ShopBody"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_vsalt")

[node name="ShopRange" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="Collision" type="CollisionShape2D" parent="ShopRange"]
shape = SubResource("RectangleShape2D_ocuq0")

[node name="Collision2" type="CollisionShape2D" parent="ShopRange"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_ocuq0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, -6.5)
scale = Vector2(0.484, 0.484)
sprite_frames = SubResource("SpriteFrames_6cbo2")
animation = &"MieayamStall"
frame_progress = 0.179569

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 7
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="ShopBody" to="." method="_on_shop_body_area_entered"]
[connection signal="area_exited" from="ShopBody" to="." method="_on_shop_body_area_exited"]
[connection signal="body_entered" from="ShopBody" to="." method="_on_shop_body_body_entered"]
[connection signal="body_exited" from="ShopBody" to="." method="_on_shop_body_body_exited"]
[connection signal="body_entered" from="ShopRange" to="." method="_on_shop_range_body_entered"]
[connection signal="body_exited" from="ShopRange" to="." method="_on_shop_range_body_exited"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Control/Button" to="." method="_on_button_button_up"]
